// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Div pager test should create block with all properties 1`] = `
{
  "type": "pager",
  "item_spacing": {
    "type": "fixed",
    "value": 1
  },
  "items": [
    {
      "type": "text",
      "text": "bla"
    }
  ],
  "layout_mode": {
    "type": "fixed",
    "neighbour_page_width": {
      "type": "fixed",
      "value": 1
    }
  },
  "orientation": "horizontal",
  "restrict_parent_scroll": 1
}
`;

exports[`Div pager test should create card with templated properties in indicator block 1`] = `
{
  "templates": {
    "card": {
      "type": "pager",
      "items": [
        {
          "type": "text",
          "$text": "txt"
        }
      ],
      "$item_spacing": "spacing",
      "$layout_mode": "mode",
      "$orientation": "display",
      "$restrict_parent_scroll": "scroll"
    }
  },
  "card": {
    "log_id": "id",
    "states": [
      {
        "state_id": 1,
        "div": {
          "type": "card",
          "txt": "bla",
          "mode": {
            "type": "fixed",
            "neighbour_page_width": {
              "type": "fixed",
              "value": 1
            }
          },
          "spacing": {
            "type": "fixed",
            "value": 1
          },
          "display": "vertical",
          "scroll": 0
        }
      }
    ]
  }
}
`;

exports[`Div pager test should create simple pager block 1`] = `
{
  "type": "pager",
  "items": [
    {
      "type": "text",
      "text": "bla"
    }
  ],
  "layout_mode": {
    "type": "percentage",
    "page_width": {
      "type": "percentage",
      "value": 1
    }
  }
}
`;

exports[`Div pager test should create templated indicator block 1`] = `
{
  "title_text": {
    "type": "pager",
    "items": [
      {
        "type": "text",
        "$text": "txt"
      }
    ],
    "$item_spacing": "spacing",
    "$layout_mode": "mode",
    "$orientation": "display",
    "$restrict_parent_scroll": "scroll"
  }
}
`;
